--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -187,22 +187,28 @@ fi
 
 %changelog
 
-* Tue Jul 13 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.1.5-rc1
-2.1.5-rc1 is a release candidate for robinhood 2.2.0
+* Tue Aug 03 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.0-beta1
 - [feature] special wildcard '**' in 'path ' or 'tree' conditions matches any count of directory levels
+- [feature] fileclass union/intersection
 - [feature] alert batching: send a mail summary instead of 1 mail per matching entry
 - [feature] alert improvements: named alerts, tweak changes
 - [feature] quota-based purge triggers fully implemented (on group or user)
 - [feature] triggers on used inode count in filesystem
 - [feature] display last matched fileclass in reporting command
+- [feature] rbh-config helper now supports batch commands
+- [feature] Lustre 2.0 ready
 - [optim.] configurable fileclass periodic matching to reduce calls to filesystem
 - [optim.] configurable attr/path periodic update in DB to reduce calls to filesystem
 - [bugfix] issue when filtering on fields with NULL values in DB
 - [bugfix] check migration timeout on last effective action, not on last queued entry
 - [bugfix] name-based conditions complaining about missing auto-generated fields
 - [bugfix] race condition when appplying policy lead to handle the same entry several times
+- [misc.] added documented file in /etc/sysconfig for robinhood service parameters
 - [misc.] changing source directory layout
+- [misc.] documentation update
 
+* Thu Jul 22 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.1.5
+- Major bug fix: incomplete database content after scan
 
 * Tue Jun 22 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.1.4
 - New recursive rmdir policy (for TMP_FS_MGR purpose)
