negation of fileclass

--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -183,8 +183,15 @@ Filesets
     FileClass  visu_on_ssd_or_expA
     {
 	# example of fileclass unions and intersections
-	definition { (pool_ssd inter visualization) union Experiment_A }
+	definition { (pool_ssd inter visualization) union not Experiment_A }
     } 
+
+    FileClass  no_visu_ssd
+    {
+	# example of fileclass unions and intersections
+	definition { not visu_on_ssd }
+    } 
+
 }
 
 purge_policies
