--- a/tests/lhsm/cfg/test_fileclass.conf
+++ b/tests/lhsm/cfg/test_fileclass.conf
@@ -48,6 +48,13 @@ Filesets
             Migration_hints="fileclass={fileclass}";
             archive_num = 1;
         }
+
+        FileClass even_and_not_B
+        {
+            definition { even_files INTER NOT in_dir_B }
+            Migration_hints="fileclass={fileclass}";
+            archive_num = 1;
+        }
 }
 
 
@@ -63,6 +70,13 @@ migration_policies
         condition { last_mod > 1s }
     }
 
+    # migrate files based on inter not 
+    policy not_migr
+    {
+        target_fileclass = even_and_not_B;
+        condition { last_mod > 1s }
+    }
+
     # migrate files based on UNION
     policy union_migr
     {
@@ -75,6 +89,7 @@ migration_policies
     {
         condition { last_mod > 1s }
         archive_num = 1;
+        Migration_hints="unmatched";
     }
 
 }
