Ability to match classes at scan time (not only at policy application).

--- a/doc/templates/hsm_policy_detailed.conf
+++ b/doc/templates/hsm_policy_detailed.conf
@@ -204,8 +204,7 @@ Purge_Policies
 
         # release files that have not been accessed recently (last 6h)
         # and that have not been written the last day.
-        condition
-        {
+        condition {
             last_access > 6h 
             and
             last_mod > 24h
@@ -352,7 +351,7 @@ ChangeLog
         reader_id = "cl1" ;
     }
     # clear changelog every 100 records:
-    batch_ack_count = 100
+    batch_ack_count = 100;
 
     force_polling = ON;
     polling_interval = 1s; 
