--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -86,6 +86,10 @@ EntryProcessor
     # info collectors are suspended until this count decreases
     max_pending_operations = 10000 ;
 
+    # match classes at scan/discovery time (not only when applying the policies)
+    # and according to db_info_update policy
+    match_classes = TRUE;
+
     # Optionnaly specify a maximum thread count for each stage of the pipeline:
     # <stagename>_threads_max = <n> (0: use default)
     # STAGE_CHECK_EXIST_threads_max	= 8 ;
@@ -184,12 +188,6 @@ Filesets
     {
 	# example of fileclass unions and intersections
 	definition { (pool_ssd inter visualization) union not Experiment_A }
-    } 
-
-    FileClass  no_visu_ssd
-    {
-	# example of fileclass unions and intersections
-	definition { not visu_on_ssd }
     } 
 
 }
@@ -311,3 +309,9 @@ Rmdir_Parameters
     rmdir_queue_size = 256 ;
 }
 
+db_update_policy
+{
+	md_update   = on_event_periodic(1sec,1min);
+	path_update = on_event_periodic(10sec,6h);
+	fileclass_update = periodic(30min);
+}
