adapted sanity for new matching

--- a/tests/lhsm/cfg/test_updt.conf
+++ b/tests/lhsm/cfg/test_updt.conf
@@ -66,3 +66,9 @@ purge_policies
         condition { last_access >= 0 }
    }
 }
+
+EntryProcessor
+{
+    # don't match when scanning
+    match_classes = FALSE;
+}
