notify option in triggers to raise an alert when the high watermark is reached.

--- a/tests/lhsm/cfg/test_trig3.conf
+++ b/tests/lhsm/cfg/test_trig3.conf
@@ -40,6 +40,7 @@ purge_trigger
     high_watermark_cnt = 50;
     low_watermark_cnt  = 40;
     check_interval     = 5min ;
+    notify = TRUE;
 }
 
 purge_trigger
@@ -49,6 +50,7 @@ purge_trigger
     high_watermark_vol = 100MB;
     low_watermark_vol  = 80MB;
     check_interval     = 5min ;
+    notify = TRUE;
 }
 
 purge_trigger
@@ -58,6 +60,7 @@ purge_trigger
     high_watermark_vol = 10MB;
     low_watermark_vol  = 5MB;
     check_interval     = 5min ;
+    notify = TRUE;
 }
 
 purge_parameters
