--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -203,10 +203,12 @@ fi
 - [feature] Lustre 2.0 ready
 - [optim.] configurable fileclass periodic matching to reduce calls to filesystem
 - [optim.] configurable attr/path periodic update in DB to reduce calls to filesystem
+- [bugfix] explicit trace when readdir fails
 - [bugfix] issue when filtering on fields with NULL values in DB
 - [bugfix] check migration timeout on last effective action, not on last queued entry
 - [bugfix] name-based conditions complaining about missing auto-generated fields
 - [bugfix] race condition when appplying policy lead to handle the same entry several times
+- [bugfix] removing removed directories from database for recursive rmdir policies
 - [misc.] added documented file in /etc/sysconfig for robinhood service parameters
 - [misc.] changing source directory layout
 - [misc.] documentation update
