--- a/configure.ac
+++ b/configure.ac
@@ -4,8 +4,8 @@
 
 AC_PREREQ(2.59)
 
-AC_INIT( [robinhood], [2.2.0], [robinhood-support@lists.sourceforge.net])
-AC_SUBST( [RELEASE], [2.patch1] )
+AC_INIT( [robinhood], [2.2.0p1], [robinhood-support@lists.sourceforge.net])
+AC_SUBST( [RELEASE], [1] )
 
 AC_CONFIG_AUX_DIR([autotools])
 AC_CONFIG_MACRO_DIR([autotools/m4])
