--- a/scripts/robinhood.init.in
+++ b/scripts/robinhood.init.in
@@ -57,7 +57,7 @@ build_fslist()
 
 	if [[ $# -eq 0 ]]; then
 		# no args, consider all files under the configuration directory
-		for fs in $(ls -1 $RH_CONF_DIR/* 2>&-)
+		for fs in $(ls -1 $RH_CONF_DIR/*.conf $RH_CONF_DIR/*.cfg 2>&-)
 		do
 			[ -f $fs ] && fs_list="$fs_list $fs"
 		done
@@ -218,6 +218,33 @@ stop_fs()
 	return $rc
 }
 
+#
+# reload_fs
+# reload the configuration for the given filesystem
+#
+reload_fs()
+{
+	local conf=$1
+	local pidfile=$(pidfile_name $conf)
+	if [ -z "$RBH_OPT" ]; then
+		local cmdline="$DAEMON -d -f $conf -p $pidfile"
+	else
+		local cmdline="$DAEMON $RBH_OPT -d -f $conf -p $pidfile"
+	fi
+
+	# check if there is still some process
+	if daemon_exist $pidfile "$cmdline" ; then
+		local pid=$(<$pidfile)
+
+		echo "Robinhood for $conf is running: process pid $pid"
+		[ -d /proc/$pid ] && action "Reloading configuration for process $pid..." /bin/kill -HUP $pid
+		return 0
+	else
+		echo "Robinhood for $conf is not running"
+	fi
+
+}
+
 # 
 # start action
 #
@@ -254,6 +281,18 @@ status()
 	done
 }
 
+# 
+# reload action
+#
+reload()
+{
+	local fs
+	for fs in $(build_fslist $@)
+	do
+		reload_fs $fs
+	done
+}
+
 # See how we were called.
 case "$1" in
   start)
@@ -271,6 +310,11 @@ case "$1" in
 	status $@
 	RETVAL=$?
 	;;
+  reload)
+	shift
+	reload $@
+	RETVAL=$?
+	;;
   restart)
 	shift
 	stop $@
@@ -278,7 +322,7 @@ case "$1" in
 	RETVAL=$?
 	;;
   *)
-	echo "Usage: $0 {start|stop|status|restart}"
+	echo "Usage: $0 {start|stop|status|reload|restart}"
 	exit 1
 esac
 
