--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -1,3 +1,17 @@
+##
+# rpm macros for old systems < el5
+# (defined if bcond_with does not already exist)
+# 
+%if %{?bcond_with:0}%{!?bcond_with:1}
+%define nil                    %{!?nil}
+%define defined()      %{expand:%%{?%{1}:1}%%{!?%{1}:0}}
+%define undefined()    %{expand:%%{?%{1}:0}%%{!?%{1}:1}}
+%define with()         %{expand:%%{?with_%{1}:1}%%{!?with_%{1}:0}}
+%define without()      %{expand:%%{?with_%{1}:0}%%{!?with_%{1}:1}}
+%define bcond_with()           %{expand:%%{?_with_%{1}:%%global with_%{1} 1}}
+%define bcond_without()        %{expand:%%{!?_without_%{1}:%%global with_%{1} 1}}
+%endif
+
 #####################################
 # define 'with' conditions
 %bcond_with lustre
@@ -193,6 +207,12 @@ fi
 %{_initrddir}/@PURPOSE_SVC@
 
 %changelog
+
+* Wed Sep 08 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.0p1
+- [bugfix] unescaped SQL strings caused error on filenames with single quotes
+- [bugfix] error in init script when RBH_OPT contains several options
+- [misc.] a gap in OST index list should displays a warning, not an error
+- [pkg] common spec file for both el4, el5 and el6
 
 * Tue Aug 27 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.0
 - [feature] fileclass union/intersection/negation
