--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -208,9 +208,12 @@ fi
 
 %changelog
 
-* Thu Sep 09 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.1-0.rc1
+* Mon Sep 31 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.1
 - [feature] new purge command: --purge-class to apply purge policy on files in a given class
 - [feature] new migration command: --migrate-class to apply migration policy on files in a given class
+- [report cmd] Added summary line to all reports, with total nbr entries and volume.
+- [report cmd] Added '-q' option to hide headers and footers in reports.
+
 
 * Wed Sep 08 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.0p1
 - [bugfix] unescaped SQL strings caused error on filenames with single quotes
