--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -214,6 +214,9 @@ fi
 - [report cmd] Added summary line to all reports, with total nbr entries and volume.
 - [report cmd] Added '-q' option to hide headers and footers in reports.
 
+* Mon Sep 20 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.0p2
+- [bugfix] retrieving Lustre pool fails with error "Unsupported Lustre magic number"
+- [bugfix] wrong class matching on OST pools when scanning
 
 * Wed Sep 08 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.0p1
 - [bugfix] unescaped SQL strings caused error on filenames with single quotes
