--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -9,7 +9,7 @@ if SHERPA
 PURPOSE_SRC=sherpa_tools.c
 endif
 
-libcommontools_la_SOURCES= RW_Lock.c SemN.c uidgidcache.c RobinhoodMisc.c global_config.c queue.c StringAlloc.c $(FS_SRC) $(PURPOSE_SRC)
+libcommontools_la_SOURCES= RW_Lock.c SemN.c RobinhoodMisc.c global_config.c queue.c StringAlloc.c uidgidcache.c $(FS_SRC) $(PURPOSE_SRC)
 
 indent:
 	$(top_srcdir)/scripts/indent.sh
