Added replacement for getmentent_r

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -8,8 +8,11 @@ endif
 if SHERPA
 PURPOSE_SRC=sherpa_tools.c
 endif
+if MNTENTCOMPAT
+COMPAT_SRC=mntent_compat.c mntent.h
+fi
 
-libcommontools_la_SOURCES= RW_Lock.c SemN.c uidgidcache.c RobinhoodMisc.c global_config.c queue.c StringAlloc.c $(FS_SRC) $(PURPOSE_SRC)
+libcommontools_la_SOURCES= RW_Lock.c SemN.c uidgidcache.c RobinhoodMisc.c global_config.c queue.c StringAlloc.c $(FS_SRC) $(PURPOSE_SRC) $(COMPAT_SRC)
 
 indent:
 	$(top_srcdir)/scripts/indent.sh
