--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -213,6 +213,7 @@ fi
 - [feature] new migration command: --migrate-class to apply migration policy on files in a given class
 - [report cmd] Added summary line to all reports, with total nbr entries and volume.
 - [report cmd] Added '-q' option to hide headers and footers in reports.
+- [compat.] Support for Lustre MDT changelogs on Lustre v2.0 final
 
 * Mon Sep 20 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.0p2
 - [bugfix] retrieving Lustre pool fails with error "Unsupported Lustre magic number"
