--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -213,6 +213,8 @@ fi
 - [feature] new migration command: --migrate-class to apply migration policy on files in a given class
 - [report cmd] Added summary line to all reports, with total nbr entries and volume.
 - [report cmd] Added '-q' option to hide headers and footers in reports.
+- [misc.] new command 'repair_db' in rbh-config, to fix tables after a MySQL server crash.
+- [compat.] port to FreeBSD
 
 * Mon Sep 20 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.0p2
 - [bugfix] retrieving Lustre pool fails with error "Unsupported Lustre magic number"
