Support of syslog for logging

--- a/doc/templates/hsm_main.conf
+++ b/doc/templates/hsm_main.conf
@@ -28,7 +28,11 @@ Log
     debug_level = EVENT;
 
     # Log file
-    log_file = "/var/log/robinhood/rh.log";
+    log_file = syslog ; # log using syslog (see also 'syslog_facility' parameter)
+    # can also be a file. E.g. log_file = "/var/log/robinhood.log";
+
+    # specifies the syslog facility and priority
+    syslog_facility = local1.info;
 
     # File for reporting purge events
     report_file = "/var/log/robinhood/reports.log";
