--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -30,7 +30,11 @@ Log
     debug_level = EVENT ;
 
     # Log file
-    log_file = "/var/log/robinhood.log" ;
+    log_file = syslog ; # log using syslog (see also 'syslog_facility' parameter)
+    # can also be a file. E.g. log_file = "/var/log/robinhood.log";
+
+    # specifies the syslog facility and priority
+    syslog_facility = local1.info;
 
     # File for reporting purge events
     report_file = "/var/log/robinhood_reports.log" ;
