--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -211,6 +211,7 @@ fi
 * Tue Oct 19 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.1
 - [feature] new purge command: --purge-class to apply purge policy on files in a given class
 - [feature] new migration command: --migrate-class to apply migration policy on files in a given class
+- [feature] support of syslog for logging
 - [report cmd] Added summary line to all reports, with total nbr entries and volume.
 - [report cmd] Added '-q' option to hide headers and footers in reports.
 - [misc.] new command 'repair_db' in rbh-config, to fix tables after a MySQL server crash.
