--- a/robinhood.old_spec.in
+++ b/robinhood.old_spec.in
@@ -229,6 +229,7 @@ fi
 - [feature] support of syslog for logging
 - [report cmd] Added summary line to all reports, with total nbr entries and volume.
 - [report cmd] Added '-q' option to hide headers and footers in reports.
+- [optim.] changed primary key format to reduce DB requests (require to run "rbh-config empty_db" after upgrading to this version)
 - [misc.] new command 'repair_db' in rbh-config, to fix tables after a MySQL server crash.
 - [compat.] Support for Lustre MDT changelogs on Lustre v2.0 final
 - [compat.] port to FreeBSD
