close to compiling backup_fs flavor

--- a/src/robinhood/Makefile.am
+++ b/src/robinhood/Makefile.am
@@ -14,25 +14,31 @@ all_libs=	../logs/liblogs.la \
 	        ../cfg_parsing/libconfigparsing.la \
                 ../fs_scan/libfsscan.la \
                 ../entry_processor/libentryproc.la \
-                ../policy_matching/libpolicies.la \
-                ../policy_modules/purge/libresmonitor.la \
-                ../list_mgr/liblistmgr.la
+                ../policy_matching/libpolicies.la
 
 if CHANGELOGS
 all_libs += ../chglog_reader/libchglog_rd.la
 endif
 if TMP_FS_MGR
+all_libs += ../policy_modules/purge/libresmonitor.la
 all_libs += ../policy_modules/rmdir/librmdir.la
 endif
 if SHERPA
+all_libs += ../policy_modules/purge/libresmonitor.la
 all_libs += ../policy_modules/rmdir/librmdir.la
 all_libs += ../policy_modules/migration/libmigration.la
 endif
 if LUSTRE_HSM
+all_libs += ../policy_modules/purge/libresmonitor.la
+all_libs += ../policy_modules/migration/libmigration.la
+all_libs += ../policy_modules/hsm_remove/libhsmrm.la
+endif
+if BACKUP_FS
 all_libs += ../policy_modules/migration/libmigration.la
 all_libs += ../policy_modules/hsm_remove/libhsmrm.la
 endif
 
+all_libs += ../list_mgr/liblistmgr.la
 all_libs += ../common/libcommontools.la
 
 if TMP_FS_MGR
@@ -67,6 +73,23 @@ rbh_hsm_report_SOURCES=robinhood_report.c
 rbh_hsm_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_hsm_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 endif
+
+if BACKUP_FS
+sbin_PROGRAMS=rbh-backup rbh-backup-report
+
+# dependencies:
+rbh_backup_DEPENDENCIES=$(all_libs)
+rbh_backup_report_DEPENDENCIES=$(all_libs)
+
+rbh_backup_SOURCES=robinhood_main.c
+rbh_backup_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_backup_LDFLAGS=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_backup_report_SOURCES=robinhood_report.c
+rbh_backup_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_backup_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+endif
+
 
 if SHERPA
 sbin_PROGRAMS=rbh-sherpa rbh-sherpa-report
