--- a/tests/lhsm/cfg/common.conf
+++ b/tests/lhsm/cfg/common.conf
@@ -58,3 +58,9 @@ ListManager
         	retry_delay_microsec = 1000 ;
 	}
 }
+
+# for tests with backup purpose
+Backend
+{
+	opt_string = "root=/tmp/backend";
+}
