--- a/tests/lhsm/cfg/log_common.conf
+++ b/tests/lhsm/cfg/log_common.conf
@@ -46,3 +46,9 @@ FS_Scan {
 	min_scan_interval = 100;
 	max_scan_interval = 100;
 }
+
+# for tests with backup purpose
+Backend
+{
+	opt_string = "root=/tmp/backend";
+}
