--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,22 +1,22 @@
 
-EXTRA_DIST= lhsm/1-test_setup.sh	\
-	lhsm/2-run-tests.sh		\
-	lhsm/3-tests-lustre.sh	\
-	lhsm/4-test_report.sh		\
-	lhsm/cleanup.sh		\
-	lhsm/README			\
-	lhsm/bench_rpc.sh		\
-	lhsm/cfg/common.conf		\
-	lhsm/cfg/test1.conf		\
-	lhsm/cfg/test2.conf		\
-	lhsm/cfg/test3.conf		\
-	lhsm/cfg/test_purge.conf	\
-	lhsm/cfg/test_purge2.conf	\
-	lhsm/cfg/test_rm1.conf	\
-	lhsm/cfg/test_xattr.conf	\
-	lhsm/cfg/test_path.conf	\
-	lhsm/cfg/immediate_rm.conf	\
-	lhsm/cfg/test_updt.conf	\
-	lhsm/cfg/test_trig.conf	\
-	lhsm/cfg/test_trig2.conf \
+EXTRA_DIST= lustre_fs/1-test_setup.sh	\
+	lustre_fs/2-run-tests.sh		\
+	lustre_fs/3-tests-lustre.sh	\
+	lustre_fs/4-test_report.sh		\
+	lustre_fs/cleanup.sh		\
+	lustre_fs/README			\
+	lustre_fs/bench_rpc.sh		\
+	lustre_fs/cfg/common.conf		\
+	lustre_fs/cfg/test1.conf		\
+	lustre_fs/cfg/test2.conf		\
+	lustre_fs/cfg/test3.conf		\
+	lustre_fs/cfg/test_purge.conf	\
+	lustre_fs/cfg/test_purge2.conf	\
+	lustre_fs/cfg/test_rm1.conf	\
+	lustre_fs/cfg/test_xattr.conf	\
+	lustre_fs/cfg/test_path.conf	\
+	lustre_fs/cfg/immediate_rm.conf	\
+	lustre_fs/cfg/test_updt.conf	\
+	lustre_fs/cfg/test_trig.conf	\
+	lustre_fs/cfg/test_trig2.conf \
 	test_compil_switches.sh
